--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
   font-family: Roboto, Arial, sans-serif;
 }
 
+p {
+    margin: 0;
+}
+
 .header,
 .first-content,
 .footer {
@@ -17,6 +21,29 @@ body {
     color: #F9FAF8;
 }
 
+.box {
+    border: 2px solid #3882F6;
+    border-radius: 8px;
+}
+
 .third-content {
     background-color: #E5E7EB;
+}
+
+.sign-up-content {
+    background-color: #3882F6;
+}
+
+.sign-up-content .button {
+    border-color: #F9FAF8;
+    border: solid 1px;
+}
+
+.button {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 5px;
+    color: #F9FAF8;
+    cursor: pointer;
+    padding: 5px 25px;
 }
