--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: Roboto, Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 p {
     margin: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 .header,
@@ -21,7 +27,23 @@ p {
     color: #F9FAF8;
 }
 
+.header {
+    display: flex;
+    justify-content: center;
+}
+
+.header-content {
+    padding: 10px;
+    max-width: 900px;
+    flex: 1;
+    gap: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .header-logo {
+    flex: 1;
     font-size: 24px;
     font-weight: 600;
 }
