--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  border: solid 1px #333;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
   font-family: Roboto, Arial, sans-serif;
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
 }
 
 p {
@@ -33,7 +35,7 @@ a {
 }
 
 .header-content {
-    padding: 10px;
+    padding: 10px 0px;
     max-width: 900px;
     flex: 1;
     gap: 12px;
@@ -48,6 +50,20 @@ a {
     font-weight: 600;
 }
 
+.first-content {
+    display: flex;
+    justify-content: center;
+}
+
+.first-container {
+    max-width: 900px;
+    display: flex;
+}
+
+.first-container > img {
+    width: 450px;
+}
+
 .hero-main {
     font-size: 48px;
     font-weight: 900;
@@ -57,6 +73,10 @@ a {
 .header-content > a {
     font-size: 18px;
     color: #E5E7EB
+}
+
+.hero-image {
+    /* widths? */
 }
 
 .information-header {
