--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,17 @@ a {
 .first-container {
     max-width: 900px;
     display: flex;
+    margin: 50px 0px;
+}
+
+.hero-secondary {
+    margin-bottom: 8px;
 }
 
 .first-container > img {
     width: 450px;
+    /* height: auto; */
+    /* flex-shrink: 0; */
 }
 
 .hero-main {
@@ -73,10 +80,6 @@ a {
 .header-content > a {
     font-size: 18px;
     color: #E5E7EB
-}
-
-.hero-image {
-    /* widths? */
 }
 
 .information-header {
