--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
   font-family: Roboto, Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
 }
 
 p {
@@ -65,6 +64,7 @@ a {
     margin-bottom: 8px;
 }
 
+/* imaged resizing not setup. Work on imaged initial size, and resizing */
 .first-container > img {
     width: 450px;
     /* height: auto; */
@@ -82,6 +82,37 @@ a {
     color: #E5E7EB
 }
 
+.second-content {
+    max-width: 900px;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 100px;;
+}
+
+.information {
+    align-self: center;
+    margin: 30px 0px;
+}
+
+.box-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.box-wrapper {
+    width: 150px;
+    text-align: center;
+}
+
+.content-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .information-header {
     font-size: 36px;
     color: #1F2937;
@@ -96,8 +127,10 @@ a {
 }
 
 .box {
-    border: 2px solid #3882F6;
+    border: 3px solid #3882F6;
     border-radius: 8px;
+    width: 150px;
+    height: 150px;
 }
 
 .third-content {
@@ -110,11 +143,12 @@ a {
 
 .sign-up-content .button {
     border-color: #F9FAF8;
-    border: solid 1px;
+    border: solid 2px;
 }
 
 .button {
     background-color: #3882F6;
+    font-weight: 600;
     border: none;
     border-radius: 5px;
     color: #F9FAF8;
