--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 *::after,
 *::before {
   box-sizing: border-box;
-  border: solid 1px #333;
 }
 
 body {
@@ -171,12 +170,20 @@ a {
     font-weight: 500;
 }
 
+.footer {
+    text-align: center;
+    padding: 20px;
+}
+
+/*  */
+
 .third-content {
     background-color: #E5E7EB;
 }
 
 .sign-up-content {
     background-color: #3882F6;
+    border-radius: 10px;
     padding: 30px 60px;
 }
 
